add maildev and tika services to docker-compose
Signed-off-by: Kipruto <43873157+kelvinkipruto@users.noreply.github.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,6 +123,34 @@ services:
       #- MAIL_ENCRYPTION=null
     restart: unless-stopped
 
+  maildev:
+    image: soulteary/maildev:latest
+    container_name: maildev
+    restart: unless-stopped
+    ports:
+      - "1080:1080"
+      - "1025:1025"
+    expose:
+      - "1080"
+      - "1025"
+    volumes:
+      - ./data/maildev:/data
+    networks:
+      - my-network
+
+  tika:
+    image: apache/tika:latest
+    container_name: tika
+    restart: unless-stopped
+    ports:
+      - "9998:9998"
+    expose:
+      - "9998"
+    networks:
+      - my-network
+    volumes:
+      - ./data/tika:/data
+
 networks:
   my-network:
     driver: bridge
